--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,26 +6,31 @@ services:
     container_name: mysql_db
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: password123
       MYSQL_DATABASE: glossary
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
     volumes:
       - mysql_data:/var/lib/mysql
-      - ./dump.sql:/docker-entrypoint-initdb.d/dump.sql 
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql  # прямое подключение
+      - ./dump.sql:/docker-entrypoint-initdb.d/dump.sql  # ваших файлов
     ports:
       - "3306:3306"
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 5s
+      timeout: 10s
+      retries: 5
 
   app:
     build: .
     container_name: glossary
     restart: always
     depends_on:
-      - mysql
+      mysql:
+        condition: service_healthy
     environment:
       DB_HOST: mysql
-      DB_USER: user
-      DB_PASSWORD: password
+      DB_USER: root
+      DB_PASSWORD: password123
       DB_NAME: glossary
     ports:
       - "3000:3000"
